# kalman

./: EKI.py  README.md  dati_iniziali_EKI_ODE.py  pre-commit-config.yaml  pyproject.toml
src/kalman/: EKI.py  EKI_coupled.py  dati_iniziali_EKI_ODE.py  libreria_tesi.py  ode_implicite.py  test.py
